<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:text="@string/register" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="121dp"
        android:text="@string/calender" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="168dp"
        android:text="@string/calculator" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="215dp"
        android:text="@string/gallery" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="262dp"
        android:text="@string/googlemap" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="309dp"
        android:text="@string/internet" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="356dp"
        android:text="@string/contact" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="403dp"
        android:text="@string/messages" />




</RelativeLayout>